--- a/index.html
+++ b/index.html
@@ -1,37 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Deneme</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Homepage</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+  </head>
+  <body>
     <div class="container">
-        <ul id="list">
-            <div class="col1 col">
-                <li><a href="home.html"> <span>Home</span></a></li>
-                <h2 class="overlay">Home page</h2>
-            </div>
-            <div class="col2 col">
-                <li><a href="works.html"> <span>Works</span> </a></li>
-                <h2 class="overlay">Completed projects</h2>
-            </div>
-            <div class="col3 col">
-                <li><a href="about.html"> <span>AboutMe</span></a></li>
-                <h2 class="overlay">Learn about me</h2>
-            </div>
-            <div class="col4 col">
-                <li><a href="deneme.html"> <span>Contact</span></a></li>
-                <h2 class="overlay">Contact Information</h2>
-            </div>
-
-
-        </ul>
-
+      <ul id="list">
+        <div class="col1 col">
+          <li>
+            <a href="home.html"> <span>Home</span></a>
+          </li>
+          <h2 class="overlay">Home page</h2>
+        </div>
+        <div class="col2 col">
+          <li>
+            <a href="works.html"> <span>Works</span> </a>
+          </li>
+          <h2 class="overlay">Completed projects</h2>
+        </div>
+        <div class="col3 col">
+          <li>
+            <a href="about.html"> <span>AboutMe</span></a>
+          </li>
+          <h2 class="overlay">Learn about me</h2>
+        </div>
+        <div class="col4 col">
+          <li>
+            <a href="contact.html"> <span>Contact</span></a>
+          </li>
+          <h2 class="overlay">Contact Information</h2>
+        </div>
+      </ul>
     </div>
 
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
