--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Navbar</title>
+    <title>About me</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -13,6 +13,8 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="general.css" />
+
+
   </head>
   <body>
     <nav>
@@ -56,7 +58,29 @@
         </ul>
       </div>
     </nav>
-    <script src="app.js"></script>
+
+    <section class="questions">
+      <!-- title -->
+      <div class="title">
+        <h2>Learn more about me in the questions</h2>
+      </div>
+      <!-- questions -->
+      <div class="section-center">
+        <article class="questions">
+          <div class="question-title">
+            <p>Where did I graduate?</p>
+            <button type="button" class="question-btn">
+              <span class="plus-icon">
+                <i class="far fa-plus-square"></i>
+              </span>
+              <span class="menu-icon"></span>
+            </button>
+          </div>
+
+        </article>
+      </div>
+    </section>
+
+    <script src="app.js" ></script>
   </body>
 </html>
-
